# freshwater

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  conf.py  make_docs.sh  pyproject.toml
docs/: .buildinfo  freshwater.html  genindex.html  index.html  installation.html  make_docs.sh  py-modindex.html  readme.html  search.html  searchindex.js  tests.html
docs-source/: make_docs.sh
docs-source/doctrees/: environment.pickle  freshwater.doctree  index.doctree  installation.doctree  modules.doctree  readme.doctree  tests.doctree
docs-source/html/: index.html  installation.html  objects.inv  readme.html  searchindex.js  tests.html
docs-source/html/_sources/: tests.rst.txt
docs-source/source/: freshwater.rst  installation.md  readme.md
docs-src/: conf.py  make_docs.sh
docs-src/_build/: .buildinfo  freshwater.html  index.html  modules.html  objects.inv  readme.html
docs-src/_build/.doctrees/: environment.pickle  modules.doctree  readme.doctree
docs/.doctrees/: environment.pickle  freshwater.doctree  installation.doctree  modules.doctree  readme.doctree  tests.doctree
docs/_sources/: index.rst.txt
docs/doctrees/: environment.pickle  freshwater.doctree  genindex.doctree  index.doctree  modules.doctree  readme.doctree  tests.doctree
docs/html/: .buildinfo  freshwater.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  tests.html
docs/source/: conf.py  index.rst  installation.md
freshwater/: constants.py  eos.py  equation_of_state.py
tests/: test_eos.py  test_equation_of_state.py
(+9 files in other folders)
