[tool.poetry]
name = "freshwater"
version = "0.1.0"
description = "Python module for estimating thermodynamic properties of water in freshwater lakes."
authors = ["danielrobb <danielrobb@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["limnology", "density", "water", "equation of state"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology", 
    ]
include = [
    "LICENSE",
    ]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
