[tool.poetry]
name = "freshwater"
version = "0.1.5"
description = "Python module for estimating thermodynamic properties of water in freshwater lakes."
license = "MIT"
authors = ["danielrobb <danielrobb@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/danielrobb/freshwater"
repository = "https://github.com/danielrobb/freshwater"
documentation = "https://danielrobb.github.io/freshwater/"
keywords = ["limnology", "density", "water", "equation of state"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology", 
    ]
include = [
    "LICENSE",
    ]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
